# crud-axum

./: Cargo.toml  Dockerfile
migrations/: 20231216065151_initial_database_setup.sql
src/: handlers.rs  main.rs
