[package]
name = "crud-axum"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.0", features = ["full"] }
sqlx = { version = "0.7", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
uuid = { version = "1.6", features=["v4","serde"] }
chrono = {version = "0.4", features = ["serde"] }